# trello-timetracker

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml  render.yaml
deploy/: .env.server  README.md  deploy.sh  docker-compose.prod.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: config.js
frontend/public/power-up/: index.html
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts  (+1 more)
src/: __main__.py
src/config/: settings.py
src/migrations/: env.py
src/presentation/: main.py
static/: config.js  index.html  privacy.html
static/assets/: index-A-CdjbWd.css  index-AwIhhL7E.js  index-B-I6oLyW.css  index-B0sm7cb6.js  index-B4jWCZ3u.js  index-BBq1iIWr.css  index-BDfCdCog.js  index-BFd1Xsy4.js  index-BJFBxEdn.js  index-BOE01sX5.css  index-BOMHw1Qj.css  index-BPUyWNF4.js  index-BQwhxxW2.css  index-BSklhn8Z.js  index-BWljkZNV.js  index-BXFx6T2d.js  index-BbjBiLFG.css  index-BcTQXTWG.css  index-Bd9M9GWh.js  index-BdK3D3HE.js  index-BmeRqaKL.js  index-By-nr8Ws.css  index-C5Usj31F.css  index-C5XOX_Iz.css  index-CBGRjjNp.css  index-CDW3fn3K.css  index-CFQ70dIw.css  index-CRaNZmOR.css  index-CZGhe7VT.css  index-C_7pBW4_.css  index-CchTB9Y2.css  index-CdHwr_3w.css  index-CgbNj3gj.css  index-ChPx42NR.css  index-CtmGd-KJ.js  index-Cuq8L2C1.js  index-CvHRXtD5.css  index-D5m6z1zH.js  index-D6xkXEVN.css  index-D9PWzltn.css  (+23 more)
static/power-up/: config.js  index.html  power-up.js
tests/: test_api.py
(+53 files in other folders)
